# summer-jam

./: Makefile  pyproject.toml  readme.md  shell.nix  xxx.py
src/: objects.py
src/assets/: settings.json
src/assets/images/: README  coin.ase  sprite.piskel
src/engine/: __init__.py  app.py  assets.py  assets.py.orig  common_objects.py  constants.py  debug.py  gfx.py  object.py  particles.py  particles.py.orig  pygame_input.py  screen.py  settings.py  simple_ui.py  state_machine.py  state_transitions.py  utils.py
src/objects/: __init__.py  card.py  cards_data.py  enemy.py  levels.py  player.py  player.py.orig
src/states/: __init__.py  card_test.py  dummy.py  game.py  initial.py  menu.py  pause.py  shop.py  warning.py
